[package]
name = "readlogs"
version = "0.1.0"
edition = "2018"
readme = "README.md"
license = "MIT"
publish = false
build = "build.rs"

[profile.release]
panic = 'abort'
codegen-units = 1
lto = true

[dependencies]
yew = "0.18"
yewtil = "0.4"
anyhow = "1.0"
nom = "7.0"
derive_more = "0.99"
strum = "0.21"
strum_macros = "0.21"
chrono = { version = "0.4", features = ["wasmbind"] }
heck = "0.3"
zip = { version = "0.5", default-features = false, features = ["deflate"] }

[dev-dependencies]
test-case = "1.2"

[build-dependencies]
anyhow = "1.0"
vergen = { version = "5.1", default-features = false, features = ["git"] }
