[package]
name = "readlogs"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
license = "MIT"
publish = false
build = "build.rs"

[features]
default = []
trace = ["nom-tracable/trace"]

[dependencies]
yew = "0.19"
yewtil = "0.4"
anyhow = "1.0"
nom = "7.1"
nom_locate = "4.0"
nom-tracable = "0.8"
derive_more = "0.99"
strum = "0.21"
strum_macros = "0.21"
chrono = { version = "0.4", features = ["wasmbind"] }
zip = { version = "0.5", default-features = false, features = ["deflate"] }
wasm-bindgen = "0.2"
percent-encoding = "2.1"
web-sys = "0.3"
reqwasm = "0.3"
readlogs-macros = { path = "../readlogs-macros" }

[dev-dependencies]
test-case = "1.2"
pretty_assertions = "1.2"

[build-dependencies]
anyhow = "1.0"
vergen = { version = "5.1", default-features = false, features = ["git"] }
